--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple boilerplate for react and redux(With thunk) applications. It includes unit testing with jest.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint",
+    "test": "jest",
     "build": "rimraf ./dist && npm test && webpack",
     "start": "webpack-dev-server",
     "lint": "eslint src --ext .jsx"
@@ -41,9 +41,11 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0",
@@ -52,6 +54,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.4.0",
     "node-sass": "^4.9.2",
     "rimraf": "^2.6.2",
     "sass": "^1.9.0",
@@ -63,5 +66,15 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/test-setup/test-polyfill.js",
+      "<rootDir>/test-setup/test-config.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(scss|css)$": "<rootDir>/test-setup/scss-transformer.js",
+      "\\.(eot|ttf|woff|woff2|jpg|png|svg)$": "<rootDir>/test-setup/assets-transformer.js"
+    }
+  }
 }
